tools/tests/errors/iter_non_iterable_class.ki
class C:
    var _init_ = Function(self):
        self.x = 1
for v in C():
    discard v
